[tool.poetry]
name = "ic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mapie = "0.6.5"
jupyter = "^1.1.1"
pandas = "^2.2.3"
transformers = {extras = ["torch"], version = "^4.46.3"}
datasets = "^3.1.0"
evaluate = "^0.4.3"
numpy = "^1.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
